# contacts-detector

./: .gitattributes  .gitignore  pyproject.toml
conf/: config.yaml
src/: inference.py  main.py  model.py
static/: attention-mining-model.jit.pt
static/tokenizer/: tokenizer.json  tokenizer_config.json  vocab.txt
