[tool.poetry]
name = "contacts-detector"
version = "0.1.0"
description = ""
authors = ["Vlipper <ign.legeza@gmail.com>"]
readme = "README.md"
# packages = [{ include = "contacts_detector", from = "src" }]

[tool.poetry.dependencies]
python = "~3.10.0"
hydra-core = "~=1.3.0"
torch = "~2.0.0"
transformers = "~4.27.0"
streamlit = "~1.20.0"

[tool.poetry.group.dev.dependencies]
black = "~23.1.0"
pylint = "~2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
